@@ -2,6 +2,7 @@
 [Alexandr Topilski]
 - EULA dialog
 - Full support JSON.GET/JSON.SET commands
+- Basic support RediSearch, redis-graph types 
 
 1.9.1 / November 4, 2017
 [Alexandr Topilski]
